--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,9 @@ before_install:
   - testspace -v
 
 script:
-  - echo script
+  - git clone https://$GH_TOKEN@github.com/munderseth/mytestspace
+  - GIT_DIR=mytestspace/.git testspace "README.md{0:Master controls triggering}" suite-pass.xml --repo git "#Build.$TRAVIS_BUILD_NUMBER"
+
    
 after_script:
   - ./trigger-builds.sh
