--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,12 @@ before_install:
   - mkdir -p $HOME/bin
   - curl -s https://testspace-client.s3.amazonaws.com/testspace-linux-dev.tgz | tar -zxvf- -C $HOME/bin
   - testspace -v
-  - testspace config url http://mark.stridespace.com
+  - git clone https://$GH_TOKEN@github.com/munderseth/mytestspace
+  - GIT_DIR=mytestspace/.git testspace config url http://mark.stridespace.com
 
 script:
-  - git clone https://$GH_TOKEN@github.com/munderseth/mytestspace
-  - GIT_DIR=mytestspace/.git testspace "README.md{0:Master controls triggering}" suite-pass.xml --repo git 
+  
+  - testspace "README.md{0:Master controls triggering}" suite-pass.xml
 
    
 after_script:
