--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ before_install:
  # - git clone https://$GH_TOKEN@github.com/munderseth/mytestspace
  # - GIT_DIR=mytestspace/.git testspace config url http://mark.stridespace.com
   - git clone https://$GH_TOKEN@github.com/s2technologies/testspace.git
+  - cd testspace
+  - git checkout 18_release
   - GIT_DIR=testspace/.git testspace config url http://mark.stridespace.com
  
 script:
